cmake_minimum_required(VERSION 3.31)
project(coderArmy)

set(CMAKE_CXX_STANDARD 20)

add_executable(coderArmy main.cpp
        patterns/pattern1.cpp
        patterns/pattern2.cpp
        patterns/pattern3.cpp
        patterns/pattern4.cpp
        patterns/pattern5.cpp
        patterns/pattern6.cpp
        patterns/pattern7.cpp
        patterns/pattern8.cpp
        patterns/pattern9.cpp
        patterns/pattern10.cpp)
