cmake_minimum_required(VERSION 3.31)
project(coderArmy)

set(CMAKE_CXX_STANDARD 20)

add_executable(coderArmy main.cpp
        patterns/pattern1.cpp
        patterns/pattern2.cpp
        patterns/pattern3.cpp
        patterns/pattern4.cpp
        patterns/pattern5.cpp
        patterns/pattern6.cpp
        patterns/pattern7.cpp
        patterns/pattern8.cpp
        patterns/pattern9.cpp
        patterns/pattern10.cpp
        patterns/pattern11.cpp
        patterns/pattern12.cpp
        patterns/pattern13.cpp
        patterns/pattern14.cpp
        patterns/pattern15.cpp
        patterns/pattern16.cpp
        patterns/pattern17.cpp
        patterns/pattern18.cpp
        patterns/pattern19.cpp
        patterns/pattern20.cpp
        patterns/pattern21.cpp
        patterns/pattern22.cpp
        patterns/pattern23.cpp
        patterns/pattern24.cpp
        patterns/pattern25.cpp
        patterns/pattern26.cpp
        patterns/pattern27.cpp
        practice/tableUsingWhile.cpp
        practice/printNumbersInRange.cpp
        practice/printCharactersInRange.cpp
        practice/printNumbersBackwardInRange.cpp)
